# CMSceneGraph

./: .gitignore  CMakeLists.txt  README.md  path_config.cmake
PipelineCompiler/: CMakeLists.txt  LoadPipeline4Toml.cpp  LoadXMLPipeline.cpp  PipelineCompiler.cpp  PipelineDataCompare.cpp  SavePipeline2Toml.cpp
inc/hgl/geo/: GeoLocation.h
inc/hgl/graph/: AABB.h  Bitmap.h  BitmapData.h  BoundingSphere.h  BoundingVolumes.h  Bounds.h  Camera.h  CameraControl.h  CameraInfo.h  CameraMatrix.h  Capsule.h  ColorSpace.h  Coordinate.h  FirstPersonCameraControl.h  Frustum.h  ImageRegion.h  LineSegment.h  LookAtCameraControl.h  Mesh.h  NormalData.h  OBB.h  Plane.h  Ray.h  RealityCamera.h  Sky.h  Sphere.h  TRS.h  TextureLoader.h  TransformFaceToCamera.h  Triangle.h  VKDescriptorSetType.h  VKFormat.h  VKImageCreateInfo.h  VKImageType.h  VKInlinePipeline.h  VKInterpolation.h  VKNamespace.h  VKPipelineData.h  VKPipelineHash.h  VKPrimitiveType.h  (+21 more)
inc/hgl/graph/mtl/: ShaderDataBlock.h
inc/hgl/graph/tile/: TileObject.h
inc/hgl/graph/vulkan/: VKFormat.h  VKImageCreateInfo.h  VKInlinePipeline.h  VKPipelineData.h  VKShaderResource.h  VKStruct.h
src/: AABB.cpp  BoundingSphere.cpp  BoundingVolumes.cpp  CMakeLists.txt  Camera.cpp  Coordinate.cpp  DistanceField2D.cpp  DistanceField3D.cpp  Frustum.cpp  OBB.cpp  OBB_SetFromPoints_AVX2.cpp  Plane.cpp  Ray.cpp  Sky.cpp  TRS.cpp  VertexAttrib.cpp  Viewport.cpp  ViewportInfo.cpp
src/Bounding/: AABB.cpp  BoundingSphere.cpp  BoundingVolumes.cpp  OBB.cpp  OBB_SetFromPoints_AVX2.cpp
src/geo/: GeoLocation.cpp
src/vulkan/: VKFormat.cpp  VKPipelineData.cpp  VKPipelineDataManage.cpp  VKPipelineDataSaveLoad.cpp  VKPipelineHash.cpp  VKShaderDescriptorSet.cpp  VKShaderStage.cpp  VKString.cpp  VKVertexAttributeBinding.cpp  VKVertexInput.cpp  VKVertexInputLayout.cpp  VKVertexInputLayoutHash.cpp  VkPrimitiveType.cpp
